# cse230-fa21-final-project

./: README.md  klotski.cabal  stack.yaml
src/: Control.hs  Main.hs  Model.hs  View.hs
src/Model/: Block.hs  Board.hs
tests/: Test.hs
