name:                   klotski
version:                0.0.0.1
category:               Game
build-type:             Simple
extra-source-files:     README.md
cabal-version:          >=1.10

executable klotski
    main-is:            Main.hs
    build-depends:      base >= 4.9,
                        vty,
                        brick
    hs-source-dirs:     src
    other-modules:      View,
                        Control,
                        Model,
                        Model.Board,
                        Model.Block
    default-language:   Haskell2010
    ghc-options:        -W -threaded

test-suite tests
    default-language:   Haskell98
    type:               exitcode-stdio-1.0
    hs-source-dirs:     tests
    ghc-options:        -W -threaded
    main-is:            Test.hs
    build-depends:      base >=4.9, process